# claude-code-bot

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  integration-request.md
claude_code_bot/: __init__.py  claude_runner.py  config.py
claude_code_bot/cli/: runner.py  stream.py
claude_code_bot/mcp/: server.py  tools.py
claude_code_bot/models/: messages.py
claude_code_bot/session/: manager.py  models.py
claude_code_bot/utils/: async_utils.py  errors.py
docs/: README.md
docs/architecture/: components.md  patterns.md  system-design.md
docs/development/: contributing.md  development.md
docs/operations/: monitoring.md  operations.md
docs/processes/: deployment.md  workflows.md
docs/technical/: api-reference.md  database-schema.md  technical-spec.md
docs/user/: troubleshooting.md  user-guide.md
examples/: basic_usage.py
scripts/: run-tests.sh  setup-dev.sh
src/linear_agent/: __init__.py  config.py  main.py
tests/: conftest.py
tests/integration/: test_claude_integration.py  test_mcp_setup.py
tests/unit/: test_claude_runner.py  test_config.py  test_message_models.py  test_stream_processing.py
